Fix scrolling issue on mobile

--- a/cards/main.css
+++ b/cards/main.css
@@ -11,6 +11,16 @@ html, body {
 	color: #ffffff;
 }
 
+body {
+	min-height: 100vh;
+	/* mobile viewport bug fix */
+	min-height: -webkit-fill-available;
+  }
+
+  html {
+	height: -webkit-fill-available;
+  }
+
 .flex-container {
 	display: flex;
 	justify-content: center;
